@@ -169,6 +169,7 @@
     <Compile Include="Components\EmptyService.cs" />
     <Compile Include="Lifestyle\Components\ComponentWithDispose.cs" />
     <Compile Include="Registration\ComponentRegistrationByNamespaceTestCase.cs" />
+    <Compile Include="Registration\WithServiceTestCase.cs" />
     <Compile Include="TypedDependenciesTestCase.cs" />
     <Compile Include="ArgumentsTestCase.cs" />
     <Compile Include="BestConstructorTestCase.cs">
